created empty blocking page

--- a/button.html
+++ b/button.html
@@ -4,8 +4,6 @@
         <title> Site Blocker </title>
     </head>
     <body>
-        <h1>Blocked Sites</h1>
-        <ul>Site 1</ul>
-        <ul>Site 2</ul>
+        <p> Blocks!! </p>
     </body>
 </html>
