Sites can be added

--- a/block.html
+++ b/block.html
@@ -4,8 +4,14 @@
         <title> Site Blocker </title>
     </head>
     <body>
-        <h1>Blocked Sites</h1>
-        <ul>Site 1</ul>
-        <ul>Site 2</ul>
+        <h1>Site Blocker</h1>
+        <input type='text' id='site' />
+        <input type='button' value='add' id='add' /><br>
+
+        <ul id="list">
+            <li>Site 1</li>
+            <li>Site 2</li>
+        </ul>
+        <script src="block.js"></script>
     </body>
 </html>
