newItem creates a dynamic item instead of a basic list

--- a/block.html
+++ b/block.html
@@ -8,19 +8,13 @@
     <body>
         <div class="container pt-3">
             <h1>Site Blocker</h1>
-            <input type='text' id='site' />
+            <input type='text' id='newItem' />
             <input type='button' value='add' id='add' /><br><br>
             
             <ul id="list" class="list-group">
-                <li class="list-group-item">
+                <li class="list-group-item" style="visibility:hidden">
                     <div class="list-group list-group-horizontal">
                         <span class="list-group-item">Site 1</span>
-                        <button class="list-group-item btn btn-danger">delete</button>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="list-group list-group-horizontal">
-                        <span class="list-group-item">Site 2</span>
                         <button class="list-group-item btn btn-danger">delete</button>
                     </div>
                 </li>
